--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Click==7.0
 Django==2.1.7
+django-guardian==2.0.0
 django-precise-bbcode==1.2.10
 django-taggit==0.24.0
 easy-thumbnails==2.6
@@ -7,6 +8,10 @@ Flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+mysql-connector-python==8.0.16
 Pillow==5.4.1
+protobuf==3.7.1
 pytz==2018.9
+six==1.12.0
+sqlparse==0.3.0
 Werkzeug==0.15.2
